# Graphql_powerbi

./: .azureignore  .deploymentignore  .gitignore  README.md  auth.py  install.py  main.py  pyproject.toml  requirements.txt  startup.sh  verify_installation.py
.github/workflows/: main_c1-graphql-api-demo.yml  main_cbhdemo.yml  main_cbhdemo1.yml  main_graphql-demo.yml
gql/: __init__.py  auth_helpers.py  context.py
gql/config/: config.py  config.yaml
gql/resolvers/: __init__.py  query.py  query_first.py  resolvers_registry.py
gql/resolvers/query/: combined_databases.py  combined_users.py  company.py  company_global_admin.py  customer_addons_details.py  customer_edition_details.py  edition_function_details.py  license_customer_product.py  mavim_databases_details.py  mpm_customers.py  portal.py  portal_monthly_users_report.py  users_mavim_manager.py
gql/resolvers/transformers/: __init__.py  combined_databases_transformer.py  combined_users_transformer.py  company_global_admin_transformer.py  company_transformer.py  customer_addons_details_transformer.py  (+8 more)
gql/schemas/: __init__.py  query.py  schema.py
gql/services/: data_service.py
gql/types/: __init__.py  combined_databases.py  combined_users.py  company.py  company_global_admin.py  customer_addons_details.py  customer_edition_details.py  edition_function_details.py  license_customer_product.py  mavim_databases_details.py  mpm_customers.py  portal.py  portal_monthly_users_report.py  types_registry.py  users.py
gql/utils/: datetime.py  logger.py  reader.py  utility.py
tests/: __init__.py  test_schema.py
